# gondola

./: AUTHORS.txt  BasisProject.cmake  CMakeLists.txt  CTestConfig.cmake  INSTALL.txt  README.txt  TODO.txt
doc/: CMakeLists.txt  buildoptions.rst  documentation.rst  download.rst  faq.rst  index.rst  installation.rst  people.rst  prerequisites.rst  publications.rst
doc/install/: gcc.rst
example/: CMakeLists.txt  ids.lst  images.lst
src/: CMakeLists.txt  gondola.m
src/+gondola/: BSolver_MultiViewXY.m  BSolver_MultiViewY.m  CMakeLists.txt  CSolver_freeC_mosek.m  CSolver_freeC_spg.m  CSolver_mosek.m  CSolver_spg.m  FeatureExtr.m  Mat2Weka_Feature.m  MultiViewXY.m  MultiViewXY_freeC.m  MultiViewY.m  ProjectionOnUnitBoxSimplex.m  ReadDataFromCOMPAREConfigFile.m  ReadMedicalImage.cxx  ReadMedicalImage.m  ReadMedicalImagePipeline.cxx  ReadMedicalImagePipeline.h  WriteMedicalImage.cxx  WriteMedicalImage.m  WriteMedicalImagePipeline.h  WriteMedicalImagePipeline.txx  blockdiag.cxx  main.m  normalizeData.m  readImgList.m  readimage.m  spg.m  writeBasisImages.m
src/main/: CMakeLists.txt  gondola-config.py  gondola-crossval.py  gondola-sbia.sh.in
src/paramsearch/: __init__.py  bayesian.py  logistic.py  logisticbagging.py  randomforest.py  simplelogistic.py  simplelogisticadaboost.py  smo.py  smobagging.py  util.py
src/tools/: CMakeLists.txt  createFoldsFromIdFnLists.py  mergeArffFiles.py  wekaClassifier.py  wekaClassifierWithProbability.py  wekaParamSearchForClassifier.py  wekaRankBasis.py
test/: CMakeLists.txt
test/baseline/cv10/multiviewxy_freec_mosek/: gondola.cfg
test/baseline/cv10/multiviewxy_freec_mosek/2/: testids.lst
test/baseline/cv10/multiviewxy_freec_spg/: gondola.cfg
test/baseline/cv10/multiviewxy_mosek/: gondola.cfg
test/baseline/cv10/multiviewxy_mosek/1/: testing.arff
test/baseline/cv10/multiviewxy_mosek/2/: training.lst
test/baseline/cv10/multiviewxy_spg/: SummaryForBayesianClassifier.txt  SummaryForLogisticClassifier.txt  SummaryForRandomForestClassifier.txt  SummaryForSMOClassifier.txt  SummaryForSimpleLogisticClassifier.txt  gondola.cfg
test/baseline/cv10/multiviewxy_spg/1/: bestparam.csv  testing.arff  training.arff
test/baseline/cv10/multiviewxy_spg/2/: bestparam.csv  testing.arff  testing.lst  training.arff
test/baseline/cv10/multiviewy_mosek/: gondola.cfg
test/baseline/cv10/multiviewy_mosek/1/: training.arff
test/baseline/cv10/multiviewy_mosek/2/: testing.arff  training.arff
test/baseline/cv10/multiviewy_spg/: gondola.cfg
test/baseline/cv10/multiviewy_spg/2/: trainids.lst
test/baseline/cv20/multiviewxy_spg/: SummaryForBayesianClassifier.txt  SummaryForLogisticClassifier.txt  SummaryForRandomForestClassifier.txt  SummaryForSMOClassifier.txt  SummaryForSimpleLogisticClassifier.txt
test/baseline/cv20/multiviewxy_spg/1/: BayesianClassifierTestResults.csv  BayesianClassifierTrainResults.csv  LogisticClassifierTestResults.csv  RandomForestClassifierTestResults.csv  RandomForestClassifierTrainResults.csv  SMOClassifierTestResults.csv  SimpleLogisticClassifierTestResults.csv  SimpleLogisticClassifierTrainResults.csv  bestparam.csv  testids.lst  testing.arff  testing.lst  trainids.lst  training.arff
test/baseline/cv20/multiviewxy_spg/2/: BayesianClassifierTrainResults.csv  LogisticClassifierTrainResults.csv  RandomForestClassifierTestResults.csv  SMOClassifierTestResults.csv  SMOClassifierTrainResults.csv  SimpleLogisticClassifierTestResults.csv  SimpleLogisticClassifierTrainResults.csv  bestparam.csv  testing.arff  testing.lst  training.arff
test/input/: ids_10.lst  images_10.lst  images_20.lst
